--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,24 @@
 #wrapper {
 		text-align:center;
+		font-size: 0;
 }
 
 #mainContain {
 	width: 400px;
 	height: 400px;
 	display: inline-block;
+	font-size: 0;
 }
 
 .grid {
-	height:100px;
-	width:100px;
+	box-sizing: border-box;
+	margin: 0px;
+	height:10px;
+	width:10px;
 	display:inline-block;
 	background-color: orange;
 	vertical-align: top;
+	font-size: 0;
 }
 
 .hover {
