--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,22 @@
+#button {
+	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 40px;
+}
+
+button {
+	height: 35px;
+	width: 100px;
+	border: none;
+	border-radius: 3px;
+	background-color: #DDD;
+	color: #777;
+}
+
+button:active {
+	border: none;
+}
+
 #wrapper {
 		text-align:center;
 		font-size: 0;
