--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ button:active {
 	height:10px;
 	width:10px;
 	display:inline-block;
-	background-color: orange;
+	background-color: #EEE;
 	vertical-align: top;
 	font-size: 0;
 }
